--- a/IDE/ui/css/index.css
+++ b/IDE/ui/css/index.css
@@ -17,13 +17,9 @@
  */
 
 body {
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+    margin:auto;
 }
 
-.cover-container {
-  max-width: 42em;
-}
 
 
 /*
