--- a/IDE/ui/css/style.css
+++ b/IDE/ui/css/style.css
@@ -20,7 +20,7 @@
 }
 
 .btn {
-    background: #57a958;
+    background: #eff6f0;
     color: white;
     padding: 8px;
     border: 0;
@@ -42,9 +42,6 @@ body::-webkit-scrollbar {
 nav {
     width: 100%;
     height: 100px;
-    background: -webkit-linear-gradient(#3f9a15, #388813, #3f9a15, #388813, #3f9a15);
-    background: -o-linear-gradient(#3f9a15, #388813, #3f9a15, #388813, #3f9a15);
-    background: linear-gradient(#3f9a15, #388813, #3f9a15, #388813, #3f9a15);
     border-radius: 6px !important;
     -moz-border-radius: 6px !important;
 }
